repo/viki-app/deployment/ingress_viki_app.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: viki-app
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-prod"
    certmanager.k8s.io/acme-challenge-type: http01
spec:
  tls:
  - hosts:
    - viki.shitangdama.cn
    secretName: viki-app
  rules:
    - host: viki.shitangdama.cn
      http:
        paths:
        - path: /
          backend:
            serviceName: viki-app-service
            servicePort: 80
